force-app/main/default/objects/Opportunity/fields/HeyPaket_End_Date__c.field-meta.xml
<CustomField>
    <fullName>HeyPaket_End_Date__c</fullName>
    <description>RO-1432</description>
    <inlineHelpText>Enddatum des HeyPakets. Das Datum wird automatisch beim Akzeptieren der Quote auf 12 Monate nach dem Startdatum festgelegt und definiert das Expiration Date des Budgets. Wenn der Zeitraum 6 oder 18 Monate sein soll, muss ein Support Ticket erstellt werden. Zum Enddatum wird das Paket automatisch deaktiviert und ggf. ein Auto-Renewal erstellt (falls nicht gekündigt)</inlineHelpText>
    <label>HeyPaket End Date</label>
    <type>Date</type>
</CustomField>