force-app/main/default/objects/Opportunity/fields/HeyPaket_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>HeyPaket_Start_Date__c</fullName>
    <description>RO-1432</description>
    <inlineHelpText>Startdatum des HeyPakets. Das Datum wird automatisch beim Akzeptieren der Quote aus dem HeyPaket Start Date auf der Quote eingetragen und definiert, wann das HeyPaket aktiviert wird, also ab wann der Kunde das Budget freigeschaltet bekommt.</inlineHelpText>
    <label>HeyPaket Start Date</label>
    <type>Date</type>
</CustomField>