force-app/main/default/objects/Opportunity/fields/HeyPaket_Start_Date_reached__c.field-meta.xml
<CustomField>
    <fullName>HeyPaket_Start_Date_reached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HeyPaket Start Date reached</label>
    <type>Checkbox</type>
</CustomField>