force-app/main/default/objects/Opportunity/fields/HeyPaket_Status__c.field-meta.xml
<CustomField>
    <fullName>HeyPaket_Status__c</fullName>
    <description>RO-1432</description>
    <inlineHelpText>Aktueller Status des HeyPakets. 
Active = HeyPaket ist aktiv und wird automatisch zum angegebenen End date verlängert
Inactive = HeyPaket wird nicht verlängert, Account hat kein aktives HeyPaket
Renewed = HeyPaket ist aktiv und die Kündigungsfrist ist abgelaufen. HeyPaket wird zum End date automatisch erneuert
Cancelled = HeyPaket wurde gekündigt, verlängert sich nicht, und hat ab dem End date kein aktives HeyPaket mehr
Scheduled = HeyPaket ist für die Zukunft geplant.</inlineHelpText>
    <label>HeyPaket Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Renewed</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>