force-app/main/default/objects/Opportunity/fields/HeyPaket_Type__c.field-meta.xml
<CustomField>
    <fullName>HeyPaket_Type__c</fullName>
    <description>RO-1432</description>
    <inlineHelpText>&quot;HeyPaket-Typ der Opportunity. Mögliche Werte sind: Essential, Advanced, Professional, Ultimate

Mehr Informationen findest du hier https://heyjobs.atlassian.net/wiki/spaces/B2B/pages/2820964365/HeyPakete+bersicht#Leistungen-der-einzelnen-HeyPakete-im-Detail &quot;</inlineHelpText>
    <label>HeyPaket Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Essential</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Ultimate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>