force-app/main/default/objects/Opportunity/fields/Hunter__c.field-meta.xml
<CustomField>
    <fullName>Hunter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name der Person, die die Demo hält.</inlineHelpText>
    <label>Demo Hunter</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>startsWith</operation>
            <value>Head of</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>startsWith</operation>
            <value>Large</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>startsWith</operation>
            <value>Small</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Large VP</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>startsWith</operation>
            <value>Enterprise</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>startsWith</operation>
            <value>Agency</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>startsWith</operation>
            <value>System</value>
        </filterItems>
        <infoMessage>Make sure to choose someone from the German Customer Acquisition team!</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>