force-app/main/default/objects/Opportunity/fields/Implementation_timeline__c.field-meta.xml
<CustomField>
    <fullName>Implementation_timeline__c</fullName>
    <description>RO-2093</description>
    <inlineHelpText>Bis zu welchem Zeitpunkt plant das Unternehmen die Einführung einer neuen Rekrutierungslösung?</inlineHelpText>
    <label>Implementation timeline</label>
    <type>Date</type>
</CustomField>