force-app/main/default/objects/Opportunity/fields/Initial_Opp_Creation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Initial_Opp_Creation_Amount__c</fullName>
    <description>Marks if a new opp should be created after this opp moves to Closed Won
RO-2419</description>
    <label>Initial Opp Creation Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>