force-app/main/default/objects/Opportunity/fields/Instant_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Instant_Purchase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For onlinekauf Opportunities</description>
    <label>Instant Purchase</label>
    <type>Checkbox</type>
</CustomField>