force-app/main/default/objects/Opportunity/fields/Integration_type__c.field-meta.xml
<CustomField>
    <fullName>Integration_type__c</fullName>
    <description>RO-2067</description>
    <inlineHelpText>Art der Integration mit der/dem Kund*in. (Wie werden Bewerbungen geliefert?)
ATS Full Integration) (Bewerbungsmanagementsysteme), LinkOut (Link to Career Page) oder Email (via RP)</inlineHelpText>
    <label>Candidate Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Integration</fullName>
                <label>ATS (Full Integration)</label>
            </value>
            <value>
                <fullName>LinkOut</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>