force-app/main/default/objects/Opportunity/fields/Invoice_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date_Formula__c</fullName>
    <description>Invoice date data from JustON</description>
    <formula>ON_Invoice__r.ONB2__Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Datum, an dem die Rechnung finalisiert und an den Kunden gesendet wurde</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>