force-app/main/default/objects/Opportunity/fields/Invoice_Email_Reminder_2__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_Reminder_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Email Reminder 2</label>
    <type>Checkbox</type>
</CustomField>