force-app/main/default/objects/Opportunity/fields/Invoice_Email_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Email Reminder</label>
    <type>Checkbox</type>
</CustomField>