force-app/main/default/objects/Opportunity/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Number</label>
    <referenceTo>ONB2__Invoice__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>