force-app/main/default/objects/Opportunity/fields/Invoice_Overdue_Days_Formula__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Overdue_Days_Formula__c</fullName>
    <description>Invoice overdue days from JustON</description>
    <formula>ON_Invoice__r.ONB2__DaysOverdue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Überfällige Tage der Rechnung</inlineHelpText>
    <label>Invoice Overdue Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>