force-app/main/default/objects/Opportunity/fields/Invoice_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status_Formula__c</fullName>
    <description>Invoice Status data from JustON</description>
    <formula>TEXT(ON_Invoice__r.ONB2__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>aktueller Status der Rechnung</inlineHelpText>
    <label>Invoice Status</label>
    <type>Text</type>
</CustomField>