force-app/main/default/objects/Opportunity/fields/Is_Agency__c.field-meta.xml
<CustomField>
    <fullName>Is_Agency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to agency contacts to the agency team i</description>
    <label>Is Agency Contact (Opportunity)</label>
    <type>Checkbox</type>
</CustomField>