force-app/main/default/objects/Opportunity/fields/Jobs_on_Career_Page_Opp__c.field-meta.xml
<CustomField>
    <fullName>Jobs_on_Career_Page_Opp__c</fullName>
    <formula>0</formula>
    <inlineHelpText>Displays value from Account</inlineHelpText>
    <label>Legacy Jobs on Career Page (Opp)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>