force-app/main/default/objects/Opportunity/fields/Key_factors_in_decision_making__c.field-meta.xml
<CustomField>
    <fullName>Key_factors_in_decision_making__c</fullName>
    <description>RO-2093</description>
    <inlineHelpText>Welches sind die wichtigsten Faktoren, die die Entscheidung bei der Auswahl von Rekrutierungslösungen beeinflussen?</inlineHelpText>
    <label>Key factors in decision making</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost-Efficiency</fullName>
            </value>
            <value>
                <fullName>Integration Capability</fullName>
            </value>
            <value>
                <fullName>Scalability</fullName>
            </value>
            <value>
                <fullName>Candidate Reach and Engagement</fullName>
            </value>
            <value>
                <fullName>Analytics and Reporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>