force-app/main/default/objects/Opportunity/fields/Last_Call_Date_Account__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Date_Account__c</fullName>
    <description>Last Call Date from related Account</description>
    <formula>ENCODED:[treatNullAsNull]{!ID:Account.ActivityMetric.LastCallDateTime}</formula>
    <inlineHelpText>Datum des letzten Anrufs vom zugehörigen Account</inlineHelpText>
    <label>Last Call Date (Account)</label>
    <type>DateTime</type>
</CustomField>