force-app/main/default/objects/Opportunity/fields/Last_Outreach_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Last_Outreach_Campaign__c</fullName>
    <label>Last Outreach Campaign</label>
    <type>TextArea</type>
</CustomField>