force-app/main/default/objects/Opportunity/fields/Last_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Last_Voucher__c</fullName>
    <description>RO-2176
Most recent voucher associated to the related Account</description>
    <inlineHelpText>Der letzte Gutschein, der mit dem zugehörigen Account verbunden ist. 

Mehr Informationen findest du hier https://heyjobs.atlassian.net/wiki/spaces/BM/pages/3756392532/Voucher+Codes+Usage</inlineHelpText>
    <label>Last Voucher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>