force-app/main/default/objects/Opportunity/fields/Last_Voucher_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Voucher_Timestamp__c</fullName>
    <description>RO-2176
Date of the most recent Voucher added to the related account</description>
    <inlineHelpText>Datum des letzten hinzugefügten Gutscheins zum zugehörigen Account</inlineHelpText>
    <label>Last Voucher Timestamp</label>
    <type>Date</type>
</CustomField>