force-app/main/default/objects/Opportunity/fields/LeanData__Routing_Action__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Routing_Action__c</fullName>
    <label>Routing Action</label>
    <length>32</length>
    <type>Text</type>
</CustomField>