force-app/main/default/objects/Opportunity/fields/Loss_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason_Detail__c</fullName>
    <description>Free Test Field to explain the exact loss reason</description>
    <label>Loss Reason Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>