force-app/main/default/objects/Opportunity/fields/Lost_from_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lost_from_Stage__c</fullName>
    <description>Shows the previous Stage before becoming &quot;Close Lost&quot; / RO-649</description>
    <inlineHelpText>Shows the previous Stage before becoming &quot;Close Lost&quot;</inlineHelpText>
    <label>Legacy - Lost from Stage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>