force-app/main/default/objects/Opportunity/fields/Manager_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_s_Email__c</fullName>
    <description>This field shows the Manager Email of the record owner</description>
    <inlineHelpText>Team Lead Email of the Opportunity Owner</inlineHelpText>
    <label>Manager&apos;s Email</label>
    <type>Email</type>
</CustomField>