force-app/main/default/objects/Opportunity/fields/Marketing_Hotline__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Hotline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks if the Campaign Member was created within Marketing Hotline and had Owner from the beginning RO-272</description>
    <label>Marketing Hotline</label>
    <type>Checkbox</type>
</CustomField>