force-app/main/default/objects/Opportunity/fields/Monthly_Reach_Budget__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Reach_Budget__c</fullName>
    <description>RO - 2067
The €-amount of budget that is supposed to be used for the REACH campaign per month</description>
    <inlineHelpText>Der €-Betrag des Budgets, das monatlich für die REACH-Kampagne verwendet werden soll.

Mehr Informationen findest du hier https://heyjobs.atlassian.net/wiki/spaces/ESE/pages/3556343832/REACH+in+Salesforce</inlineHelpText>
    <label>Monthly Reach Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>