force-app/main/default/objects/Opportunity/fields/MQL_Marketing_source__c.field-meta.xml
<CustomField>
    <fullName>MQL_Marketing_source__c</fullName>
    <description>Conversion Information</description>
    <label>MQL Marketing source</label>
    <type>TextArea</type>
</CustomField>