force-app/main/default/objects/Opportunity/fields/MQL_Marketing_source_date__c.field-meta.xml
<CustomField>
    <fullName>MQL_Marketing_source_date__c</fullName>
    <label>MQL Marketing source date</label>
    <type>Date</type>
</CustomField>