force-app/main/default/objects/Opportunity/fields/MQL_Source_Date__c.field-meta.xml
<CustomField>
    <fullName>MQL_Source_Date__c</fullName>
    <description>RO-1749</description>
    <label>MQL Source Date</label>
    <type>DateTime</type>
</CustomField>