force-app/main/default/objects/Opportunity/fields/MQL_Source_Drill_Down_2__c.field-meta.xml
<CustomField>
    <fullName>MQL_Source_Drill_Down_2__c</fullName>
    <description>RO-1749</description>
    <label>MQL_Source Drill Down 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>