force-app/main/default/objects/Opportunity/fields/MQL_Type__c.field-meta.xml
<CustomField>
    <fullName>MQL_Type__c</fullName>
    <defaultValue>4</defaultValue>
    <description>RO - 1653</description>
    <inlineHelpText>Zeigt den Typ des MQLs an (1, 2, 3, oder 4) und hilft Sales, die Opportunity zu priorisieren. 

Mehr Informationen findest du hier https://heyjobs.atlassian.net/wiki/spaces/ESE/pages/3542155304/Marketing+to+Sales+Hand+Over</inlineHelpText>
    <label>MQL Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>