force-app/main/default/objects/Opportunity/fields/Next_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Action__c</fullName>
    <description>Next Action to be taken on this opportunity / RO-671</description>
    <inlineHelpText>Next Action to be taken on this opportunity</inlineHelpText>
    <label>Next Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 New</fullName>
            </value>
            <value>
                <fullName>2 Call</fullName>
            </value>
            <value>
                <fullName>3 Email</fullName>
            </value>
            <value>
                <fullName>4 Confirm</fullName>
            </value>
            <value>
                <fullName>5 Reschedule</fullName>
            </value>
            <value>
                <fullName>6 LinkedIn</fullName>
            </value>
            <value>
                <fullName>7 Follow-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>