force-app/main/default/objects/Opportunity/fields/Next_Action_Detail__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Detail__c</fullName>
    <description>Details for the next action to be taken on this opportunity / RO-671
Extended to 255 characters within RO-1151</description>
    <inlineHelpText>Details for the next action to be taken on this opportunity</inlineHelpText>
    <label>Legacy - Next Action - Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>