force-app/main/default/objects/Opportunity/fields/No_Address_Update__c.field-meta.xml
<CustomField>
    <fullName>No_Address_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Address Update</label>
    <type>Checkbox</type>
</CustomField>