force-app/main/default/objects/Opportunity/fields/No_Repeat_Purchase_Typeform__c.field-meta.xml
<CustomField>
    <fullName>No_Repeat_Purchase_Typeform__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Zeigt an, ob nach dem ersten Einholden der Rechnungs- und Lieferadresse weitere Typeforms an den/die Kund*in geschickt werden sollen. Wenn TRUE (checked) werden keine weitere Typeforms rausgeschickt. Dann muss die Rechnungs- und Lieferadresse auf der Opportunity und dem Account manuell gepflegt werden. (Dies ist für Accounts in der Inside Sales GTM Motion der Fall)</inlineHelpText>
    <label>No Repeat Purchase Typeform</label>
    <type>Checkbox</type>
</CustomField>