force-app/main/default/objects/Opportunity/fields/Number_of_Employees_from_Account__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees_from_Account__c</fullName>
    <description>RO-2155</description>
    <inlineHelpText>Changes automatically update the Account (for open opps)</inlineHelpText>
    <label>Number of Employees (from Account)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>