force-app/main/default/objects/Opportunity/fields/Offer_to_Contract_received__c.field-meta.xml
<CustomField>
    <fullName>Offer_to_Contract_received__c</fullName>
    <formula>dateTimestampContractreceived__c -  TimestampOffer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer to Contract received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>