force-app/main/default/objects/Opportunity/fields/ON_Account__c.field-meta.xml
<CustomField>
    <fullName>ON_Account__c</fullName>
    <description>Specifies the Salesforce account ID or external ID.</description>
    <formula>IF(Bulk_Invoicing__c = FALSE, Account.Id, Bulk_Invoice_Parent_Account__c)</formula>
    <inlineHelpText>Specifies the Salesforce account ID or external ID.</inlineHelpText>
    <label>JustOn: Account</label>
    <type>Text</type>
</CustomField>