force-app/main/default/objects/Opportunity/fields/ON_AdditionalInfoBlock__c.field-meta.xml
<CustomField>
    <fullName>ON_AdditionalInfoBlock__c</fullName>
    <description>Additional information to be displayed on the invoice</description>
    <formula>Additional_Billing_Information__c</formula>
    <inlineHelpText>Additional information to be displayed on the invoice</inlineHelpText>
    <label>JustOn: Additional Info Block</label>
    <type>Text</type>
</CustomField>