force-app/main/default/objects/Opportunity/fields/ON_BillingCity__c.field-meta.xml
<CustomField>
    <fullName>ON_BillingCity__c</fullName>
    <description>Replicates the Billing City</description>
    <formula>IF(
    Bulk_Invoicing__c = TRUE,
    IF(
        ISBLANK(Account.Parent.Parent.BillingCity),
        Account.Parent.BillingCity,
        Account.Parent.Parent.BillingCity
    ),
    Billing_City__c
)</formula>
    <inlineHelpText>Replicates the Billing City</inlineHelpText>
    <label>JustOn: Billing City</label>
    <type>Text</type>
</CustomField>