force-app/main/default/objects/Opportunity/fields/ON_BillingComment__c.field-meta.xml
<CustomField>
    <fullName>ON_BillingComment__c</fullName>
    <description>transfers the billing comment to the invoice</description>
    <formula>txtBillingComments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>transfers the billing comment to the invoice</inlineHelpText>
    <label>JustOn: BillingComment</label>
    <type>Text</type>
</CustomField>