force-app/main/default/objects/Opportunity/fields/ON_BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>ON_BillingCountry__c</fullName>
    <description>Replicates Billing Country Code</description>
    <formula>IF(
    Bulk_Invoicing__c = TRUE,
    IF(
        ISBLANK(Account.Parent.Parent.BillingCountry),
        Account.Parent.BillingCountry,
        Account.Parent.Parent.BillingCountry
    ),
    TEXT(Billing_Country_Code__c)
)</formula>
    <inlineHelpText>Replicates Billing Country Code</inlineHelpText>
    <label>JustOn: Billing Country</label>
    <type>Text</type>
</CustomField>