force-app/main/default/objects/Opportunity/fields/ON_BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ON_BillingPostalCode__c</fullName>
    <description>Replicates Billing ZIP Postal Code</description>
    <formula>IF(
    Bulk_Invoicing__c = TRUE,
    IF(
        ISBLANK(Account.Parent.Parent.BillingPostalCode),
        Account.Parent.BillingPostalCode,
        Account.Parent.Parent.BillingPostalCode
    ),
    Billing_Zip_Postal_Code__c
)</formula>
    <inlineHelpText>Replicates Billing ZIP Postal Code</inlineHelpText>
    <label>JustOn: Billing Postal Code</label>
    <type>Text</type>
</CustomField>