force-app/main/default/objects/Opportunity/fields/ON_BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>ON_BillingStreet__c</fullName>
    <description>Replicates Billing Street</description>
    <formula>IF(
    Bulk_Invoicing__c = TRUE,
    IF(
        ISBLANK(Account.Parent.Parent.BillingStreet),
        Account.Parent.BillingStreet,
        Account.Parent.Parent.BillingStreet
    ),
    Billing_Street__c
)</formula>
    <inlineHelpText>Replicates Billing Street</inlineHelpText>
    <label>JustOn: Billing Street</label>
    <type>Text</type>
</CustomField>