force-app/main/default/objects/Opportunity/fields/ON_CreateSingleInvoice__c.field-meta.xml
<CustomField>
    <fullName>ON_CreateSingleInvoice__c</fullName>
    <description>enable single opportunity invoicing</description>
    <formula>IF( Bulk_Invoicing__c = true,
false,
true
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>enable single opportunity invoicing</inlineHelpText>
    <label>JustOn: Create Single Invoice</label>
    <type>Checkbox</type>
</CustomField>