force-app/main/default/objects/Opportunity/fields/ON_CurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>ON_CurrencyIsoCode__c</fullName>
    <description>Set Currency Iso Code.</description>
    <formula>TEXT (CurrencyIsoCode)</formula>
    <inlineHelpText>Set Currency Iso Code.</inlineHelpText>
    <label>JustOn: Currency Iso Code</label>
    <type>Text</type>
</CustomField>