force-app/main/default/objects/Opportunity/fields/ON_Discount__c.field-meta.xml
<CustomField>
    <fullName>ON_Discount__c</fullName>
    <description>Specifies the time (in days) after which the discounted payment is due.</description>
    <formula>IF(
    OR(
        SkontoAktiv__c,
        Account.SkontoAktiv__c
    ),
    30,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Specifies the time (in days) after which the discounted payment is due.</inlineHelpText>
    <label>JustOn: DiscountPaymentDue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>