force-app/main/default/objects/Opportunity/fields/ON_DiscountRate__c.field-meta.xml
<CustomField>
    <fullName>ON_DiscountRate__c</fullName>
    <description>Helper Field: shows the discount in percent that is applied</description>
    <formula>IF(
    OR(
        SkontoAktiv__c,
        Account.SkontoAktiv__c
    ),
    0.02,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Helper Field: shows the discount in percent that is applied</inlineHelpText>
    <label>JustOn: Discount Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>