force-app/main/default/objects/Opportunity/fields/ON_Email__c.field-meta.xml
<CustomField>
    <fullName>ON_Email__c</fullName>
    <description>Used to transfer the billing email to the invoice</description>
    <formula>IF(
Bulk_Invoicing__c = TRUE,
IF(
ISBLANK(Account.Parent.Parent.Billing_Email__c),
Account.Parent.Billing_Email__c,
Account.Parent.Parent.Billing_Email__c
),
Billing_Email__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to transfer the billing email to the invoice</inlineHelpText>
    <label>JustOn: Email</label>
    <type>Text</type>
</CustomField>