force-app/main/default/objects/Opportunity/fields/ON_Instalment_Type__c.field-meta.xml
<CustomField>
    <fullName>ON_Instalment_Type__c</fullName>
    <description>RO-1576</description>
    <formula>TEXT(SyncedQuote.Instalment_Type__c)</formula>
    <label>JustOn: Instalment Type</label>
    <type>Text</type>
</CustomField>