force-app/main/default/objects/Opportunity/fields/ON_Invoice__c.field-meta.xml
<CustomField>
    <fullName>ON_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The invoice that resulted from this record.</description>
    <inlineHelpText>The invoice that resulted from this record.</inlineHelpText>
    <label>JustOn: Invoice</label>
    <referenceTo>ONB2__Invoice__c</referenceTo>
    <relationshipLabel>Opportunities (JustOn: Invoice)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>