force-app/main/default/objects/Opportunity/fields/ON_InvoiceBuildError__c.field-meta.xml
<CustomField>
    <fullName>ON_InvoiceBuildError__c</fullName>
    <description>Shows errors that occurred during the last invoice run.</description>
    <inlineHelpText>Shows errors that occurred during the last invoice run.</inlineHelpText>
    <label>JustOn: Invoice Build Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>