force-app/main/default/objects/Opportunity/fields/ON_LastError__c.field-meta.xml
<CustomField>
    <fullName>ON_LastError__c</fullName>
    <description>Shows possible errors occurred during the last invoice run</description>
    <inlineHelpText>Shows possible errors occurred during the last invoice run</inlineHelpText>
    <label>Last Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>